--- a/To.Do.List/index.html
+++ b/To.Do.List/index.html
@@ -12,11 +12,10 @@
     <main>
       <section>
         <article>
-          <form id="myList">
-            <label for="sendForm"> </label>
+          <div id="myList">
             <input type="text" id="sendForm" name="sendForm" placeholder="Inserisci il tuo compito qui " />&nbsp;&nbsp;
-            <button type="submit" id="btnButton">Crea</button>
-          </form>
+            <button id="btnButton">Crea</button>
+          </div>
         </article>
       </section>
       <div id="listP">&nbsp;</div>
