--- a/Progetto.Settimana3/index.html
+++ b/Progetto.Settimana3/index.html
@@ -7,6 +7,47 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
+    <div id="container"></div>
+    <div>
+      <table>
+        <caption>
+          Tabella con Nomi, Anni e Sesso
+        </caption>
+        <thead>
+          <tr>
+            <th>Nomi</th>
+            <th>Anni</th>
+            <th>Razza</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Pippo</td>
+            <td>2</td>
+            <td>Cane</td>
+          </tr>
+          <tr>
+            <td>Pluto</td>
+            <td>5</td>
+            <td>Cane</td>
+          </tr>
+          <tr>
+            <td>Paperino</td>
+            <td>7</td>
+            <td>Gallina</td>
+          </tr>
+        </tbody>
+      </table>
+      <div><a href="javascript:void(0)">Il cosmico nulla</a></div>
+      <div><a href="javascript:void(0)">Il nulla cosmico</a></div>
+    </div>
+    <div>
+      <ul id="myList">
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
