--- a/Progetto.Settimana3/index.html
+++ b/Progetto.Settimana3/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
+    <h1>Buon game a tutti!</h1>
     <div id="container"></div>
     <div>
       <table>
